<resources>
    <string name="app_name">Dad Libs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_word_lists">Word Lists</string>
    <string name="menu_saved_stories">Saved Stories</string>
    <string name="new_dad_lib">New Dad Lib</string>
    <string name="template_menu">Template Menu</string>
    <string name="new_word_list">New Word List</string>
    <string name="edit_word_list">Edit Word List</string>
    <string name="word_list_menu">Word List Menu</string>
    <string name="new_word">New Word</string>
    <string name="edit_word">Edit Word</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="sad_bluey_description">Sad Bluey</string>
    <string name="confirm_delete_word_list">Are you sure you want to delete %1$s?</string>
    <string name="word_list_name">Name</string>
    <string name="part_of_speech">Part of Speech</string>
    <string name="part_of_speech_disabled_helper">Part of Speech can\'t be changed for non-empty list</string>
    <string name="copy">Copy</string>
    <string name="word_base_form">Base Form (%s)</string>
    <string name="inflected_forms">Inflected Forms</string>
    <string name="unspecified_form_error">Please specify the %s form!</string>
    <string name="template_editor">Template Edtitor</string>
    <string name="template_title">Title</string>
    <string name="signature">By Brendan Mitchell</string>
    <string name="initializing">Initializing…</string>
    <string name="dadlibs_logo">DadLibs Logo</string>
    <string name="word_list_singular_name">Placeholder name</string>
    <string name="editor_text_hint">Compose your Dad Lib story here…</string>
    <string name="new_placeholder">Add placeholder</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="save_story">Save Story</string>
    <string name="confirm_delete_saved_story">Are you sure you want to delete %s?</string>
    <string name="story_title">Title</string>
    <string name="menu_options">Options</string>
    <string name="export_database">Export Database</string>
    <string name="import_database">Import Database</string>
    <string name="import_items">Import Shared Items</string>
    <string name="export_database_description">Save all your words, templates, and stories so you can restore them later</string>
    <string name="import_database_description">Restore all words, templates, and stories from a file</string>
    <string name="import_item_description">Import a word list, template, or story and add it to your collection</string>
    <string name="proceed_import_database">Proceed</string>
    <string name="options">Options</string>
    <string name="menu_import_export">Import/Export Data</string>
    <string name="menu_about">About</string>
    <string name="about_version">Version</string>
    <string name="about_licenses">Software License</string>
    <string name="license_name">GPL v3</string>
    <string name="about_changelog">Changelog</string>
    <string name="about_source">Source Code</string>
    <string name="about_bug_report">Report a Bug</string>
    <string name="share">Share</string>
    <string name="bullet_text">• %s</string>
    <string name="import_prompt">\"Import %d item%s into your library?\"</string>
    <string name="invalid_data_text">\"Invalid data; did you choose the correct file?\"</string>
    <string name="failed_import_text">\"Failed to import data\"</string>
</resources>