<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/menu_import_export">

    <androidx.preference.Preference
        android:key="export_database"
        android:summary="@string/export_database_description"
        android:title="@string/export_database"
        app:singleLineTitle="false"
        app:iconSpaceReserved="false" />

    <androidx.preference.Preference
        android:key="import_database"
        android:summary="@string/import_database_description"
        android:title="@string/import_database"
        app:singleLineTitle="false"
        app:iconSpaceReserved="false" />

</androidx.preference.PreferenceScreen>
