<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_word_lists"
            android:icon="@drawable/ic_menu_word_lists"
            android:title="@string/menu_word_lists" />
        <item
            android:id="@+id/nav_saved_stories"
            android:icon="@drawable/ic_menu_saved_stories"
            android:title="@string/menu_saved_stories" />
        <item
            android:id="@+id/nav_import_export"
            android:icon="@drawable/ic_import_export"
            android:title="@string/menu_import_export" />
    </group>
</menu>