<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <!-- Name -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/word_list_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Part of Speech Dropdown -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        android:id="@+id/part_of_speech_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/part_of_speech"
        android:labelFor="@+id/part_of_speech_dropdown"
        app:endIconMode="dropdown_menu"
        app:helperText="@string/part_of_speech_disabled_helper">

        <AutoCompleteTextView
            android:id="@+id/part_of_speech_dropdown"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
